flex/flex-tests/testData/js2_highlighting/HangingCommaInRefList.js2
package {
public interface HangingCommaInRefList {}
}

class Foo implements HangingCommaInRefList ,<error descr="Type name expected"> </error>{}
interface I extends HangingCommaInRefList {}
class Bar extends Foo ,<error descr="Type name expected"> </error>{}
class Bar2 extends Foo ,<error descr="Type name expected"> </error>implements HangingCommaInRefList {}
class Bar3 extends Foo ,<error descr="Type name expected"> </error>implements HangingCommaInRefList, I {}
